Bug 136534 - UI Font replacement table loads existing rule incorrectly
Summary: UI Font replacement table loads existing rule incorrectly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.1.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-07 06:34 UTC by NISZ LibreOffice Team
Modified: 2020-12-12 20:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Correctly loaded existing rule (22.06 KB, image/png)
2020-09-07 06:34 UTC, NISZ LibreOffice Team
Details
Incorrect font replacement table. (22.06 KB, image/png)
2020-09-07 06:34 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-07 06:34:33 UTC
Created attachment 165212 [details]
Correctly loaded existing rule

Font replacement table loads the “Replace with” part of exising rules to the “Font” field instead of to the “Replace with” field, which is left empty.
This makes modifying existing rules impossible.


Steps to reproduce:
    1. Go to Options – LibreOffice – Fonts and enable “Apply replacement table”
    2. Set up an arbitrary replacement
    3. Select the new rule in the table

Actual results:
The “Replace with” font is loaded to the”Font” field, “Replace with” is empty

Expected results:
Existing rule is loaded to the “Font” and “Replace with” fields.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: baa84b5b4d287da0f00fc3fbf11f464f267c9202
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Not yet in:
Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

Additional Information: 

Bibisected using bibisect-win64-7.1 to:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=1aa9a2ac5341d457bbdc00b987285203d11333f1..b5cb211f80fd87c109633232cf340ac7969c8648 

which is a kinda huge range of nearly 400 commits.

Restricting it to only to cui/source/options/fontsubs.cxx gives only one change:
https://cgit.freedesktop.org/libreoffice/core/log/cui/source/options/fontsubs.cxx?qt=range&q=1aa9a2ac5341d457bbdc00b987285203d11333f1..b5cb211f80fd87c109633232cf340ac7969c8648


author	Caolán McNamara <caolanm@redhat.com>	2020-06-05 16:11:39 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-06-08 20:21:35 +0200

rework treeview initial toggle button col to be like expander col

Adding CC to: Caolán McNamara
Comment 1 NISZ LibreOffice Team 2020-09-07 06:34:53 UTC
Created attachment 165213 [details]
Incorrect font replacement table.
Comment 2 Julien Nabet 2020-09-07 07:42:41 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2020-09-07 07:52:24 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/102148
Comment 4 Caolán McNamara 2020-09-07 07:58:03 UTC
yeah, that's almost certainly the right fix
Comment 5 Commit Notification 2020-09-07 09:07:57 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac9c80ab08515ee2eab56293e24a5ed96ba06e5b

tdf#136534: Font replacement table loads existing rule incorrectly

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2020-09-07 09:08:58 UTC
patch for 7.0 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/102121
Comment 7 Julien Nabet 2020-09-07 09:22:33 UTC
(In reply to Julien Nabet from comment #6)
> patch for 7.0 branch waiting for review here:
> https://gerrit.libreoffice.org/c/core/+/102121

Abandoned since the patch wasn't in 7.0 branch.
Comment 8 NISZ LibreOffice Team 2020-10-13 08:42:31 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: f90500754fac014638214b5e061832b2c518aab6
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded