tdf#136534: Font replacement table loads existing rule incorrectly

Regression from cd384e2d31f74223948ea70d8aa3c318d3ceeb50
author	Caolán McNamara <caolanm@redhat.com>	2020-06-05 16:11:39 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-06-08 20:21:35 +0200
commit	cd384e2d31f74223948ea70d8aa3c318d3ceeb50 (patch)
tree	49ae5191c2bd4b13c3cd547951933fbc37cda0fa /cui/source/options/fontsubs.cxx
parent	c3669c8bd62ecf5eaa6b5e95289825bc11b2688a (diff)
rework treeview initial toggle button col to be like expander col
cause this assumption is baked into the vcl one making it hard
to adapt remaining cases

Change-Id: I31854211be5f558b51f345af6a11c471a9bd120d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102148
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>